--- a/views/svelte/src/app.scss
+++ b/views/svelte/src/app.scss
@@ -6,4 +6,6 @@ body {
     background-image: url('background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+
+    font-family: Montserrat, serif;
 }
