--- a/views/svelte/src/components/Message.scss
+++ b/views/svelte/src/components/Message.scss
@@ -1,6 +1,7 @@
 .messsage {
-    background-color: rgb(0, 0, 0, 0.1);
+    background-color: rgb(0, 0, 0, 0.2);
     color: #ffffff;
+    font-size: 0.75rem;
     padding: 0.25rem 1rem;
     border-radius: 0.5rem;
 }
