--- a/views/svelte/src/ChatBox.scss
+++ b/views/svelte/src/ChatBox.scss
@@ -17,8 +17,21 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-        max-height: 15rem;
+        height: 10rem;
         overflow-y: scroll;
+
+        &-empty {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            color: #ffffff;
+            font-size: 0.75rem;
+            background-color: rgba(0, 0, 0, 0.2);
+            border-radius: 0.5rem;
+            user-select: none;
+        }
 
         &::-webkit-scrollbar {
             background: transparent;
