--- a/views/svelte/src/components/MessageInput.scss
+++ b/views/svelte/src/components/MessageInput.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
-    background-color: rgba(50, 50, 50, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
 
@@ -10,6 +10,7 @@
         background-color: transparent;
         width: 100%;
         color: #ffffff;
+        font-size: 0.75rem;
 
         &:focus {
             outline: none;
@@ -20,14 +21,19 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgba(50, 50, 50);
-        width: 2rem;
-        height: 2rem;
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 1.5rem;
+        height: 1.5rem;
         border-radius: 9999px;
         color: white;
 
         &:hover {
             background-color: rgba(50, 50, 50, 0.5);
+        }
+
+        & > :global(*) {
+            width: 0.75rem;
+            height: 0.75rem;
         }
     }
 }
