--- a/views/svelte/src/app.scss
+++ b/views/svelte/src/app.scss
@@ -7,5 +7,5 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 
-    font-family: Montserrat, serif;
+    font-family: 'Varela Round', serif;
 }
