--- a/views/svelte/src/components/Message.scss
+++ b/views/svelte/src/components/Message.scss
@@ -1,7 +1,8 @@
 .messsage {
-    background-color: rgb(0, 0, 0, 0.2);
     color: #ffffff;
-    font-size: 0.75rem;
-    padding: 0.25rem 1rem;
+    font-size: 0.875rem;
+    letter-spacing: 0.5px;
+    padding: 0rem 0.5rem;
     border-radius: 0.5rem;
+    user-select: none;
 }
