--- a/views/svelte/src/components/Channel.scss
+++ b/views/svelte/src/components/Channel.scss
@@ -5,12 +5,26 @@
     & > &-new-message {
         position: absolute;
         inset: 0 auto auto 0;
-        background-color: #00c896;
+        background-color: #93b592;
         width: 0.5rem;
         height: 0.5rem;
         border-radius: 9999px;
-        border: 1px solid #1a1a1a;
-        transform: translateX(-25%) translateY(-25%);
+        transform: translateX(50%) translateY(50%);
+        // animation: pulse 1s infinite;
+
+        // @keyframes pulse {
+        //     0% {
+        //         background-color: #93b592;
+        //     }
+
+        //     50% {
+        //         background-color: #47761e;
+        //     }
+
+        //     100% {
+        //         background-color: #93b592;
+        //     }
+        // }
     }
 
     & > .btn-channel-name {
@@ -40,11 +54,10 @@
         position: absolute;
         inset: 0 0 auto auto;
         transform: translateX(25%) translateY(-25%);
-        background-color: rgb(255, 136, 136);
+        background-color: #f09e71;
         width: 1rem;
         height: 1rem;
         border-radius: 9999px;
-        border: 1px solid #36383c;
         color: white;
         transition: background-color 200ms ease-in-out;
 
@@ -53,8 +66,8 @@
         }
 
         & > :global(*) {
-            width: 0.5rem;
-            height: 0.5rem;
+            width: 0.75rem;
+            height: 0.75rem;
         }
     }
 }
