--- a/views/svelte/src/components/MessageInput.scss
+++ b/views/svelte/src/components/MessageInput.scss
@@ -2,38 +2,18 @@
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 0.5rem 1rem;
     border-radius: 0.5rem;
 
     & > input {
-        background-color: transparent;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 0.5rem;
+        padding: 0.5rem 1rem;
         width: 100%;
         color: #ffffff;
-        font-size: 0.75rem;
+        font-size: 0.875rem;
 
         &:focus {
             outline: none;
-        }
-    }
-
-    & > button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: rgba(0, 0, 0, 0.5);
-        width: 1.5rem;
-        height: 1.5rem;
-        border-radius: 9999px;
-        color: white;
-
-        &:hover {
-            background-color: rgba(50, 50, 50, 0.5);
-        }
-
-        & > :global(*) {
-            width: 0.75rem;
-            height: 0.75rem;
         }
     }
 }
