--- a/views/svelte/src/app.scss
+++ b/views/svelte/src/app.scss
@@ -2,10 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Chalet';
+    src: url('ChaletLondonNineteenSixty.ttf') format('truetype');
+}
+
 body {
     background-image: url('background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 
-    font-family: 'Varela Round', serif;
+    font-family: 'Chalet';
 }
