--- a/views/svelte/src/components/Messages.scss
+++ b/views/svelte/src/components/Messages.scss
@@ -1,5 +1,5 @@
 .mask {
-    --scrollbar-width: 16px;
+    --scrollbar-width: 4px;
     --mask-image-content: linear-gradient(
         to bottom,
         transparent,
@@ -10,25 +10,25 @@
     --mask-size-content: calc(100% - var(--scrollbar-width)) 100%;
     --mask-image-scrollbar: linear-gradient(black, black);
     --mask-size-scrollbar: var(--scrollbar-width) 100%;
-    mask-image: var(--mask-image-content), var(--mask-image-scrollbar);
-    mask-size: var(--mask-size-content), var(--mask-size-scrollbar);
-    mask-position: 0 0, 100% 0;
+    mask-image: var(--mask-image-scrollbar), var(--mask-image-content);
+    mask-size: var(--mask-size-scrollbar), var(--mask-size-content);
+    mask-position: 0 0, 0 0;
     mask-repeat: no-repeat, no-repeat;
-}
 
-::-webkit-scrollbar {
-    background-color: transparent;
-    width: 0.25rem;
-}
+    &::-webkit-scrollbar {
+        background-color: transparent;
+        width: var(--scrollbar-width, 4px);
+    }
 
-::-webkit-scrollbar-track {
-    background-color: hsl(0 0% 0%);
-}
+    &::-webkit-scrollbar-track {
+        background-color: hsl(0 0% 0%);
+    }
 
-::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 1);
-}
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(255, 255, 255, 1);
+    }
 
-::-webkit-scrollbar-thumb:hover {
-    background-color: hsl(0 0% 0%);
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: hsl(0 0% 0%);
+    }
 }
