--- a/views/svelte/src/components/Messages.scss
+++ b/views/svelte/src/components/Messages.scss
@@ -7,11 +7,11 @@
         black calc(100% - var(--mask-bottom-height)),
         transparent
     );
-    --mask-size-content: calc(100% - var(--scrollbar-width)) 100%;
+    --mask-size-content: 100% calc(100% - var(--scrollbar-width));
     --mask-image-scrollbar: linear-gradient(black, black);
-    --mask-size-scrollbar: var(--scrollbar-width) 100%;
-    mask-image: var(--mask-image-scrollbar), var(--mask-image-content);
-    mask-size: var(--mask-size-scrollbar), var(--mask-size-content);
+    --mask-size-scrollbar: 100% var(--scrollbar-width);
+    mask-image: var(--mask-image-content), var(--mask-image-scrollbar);
+    mask-size: var(--mask-size-content), var(--mask-size-scrollbar);
     mask-position: 0 0, 0 0;
     mask-repeat: no-repeat, no-repeat;
 
@@ -21,7 +21,7 @@
     }
 
     &::-webkit-scrollbar-track {
-        background-color: hsl(0 0% 0%);
+        background-color: transparent;
     }
 
     &::-webkit-scrollbar-thumb {
