--- a/views/solid/src/components/Messages.scss
+++ b/views/solid/src/components/Messages.scss
@@ -1,3 +1,24 @@
+.scrollbar {
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+        background-color: transparent;
+        width: var(--scrollbar-width, 4px);
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(255, 255, 255, var(--scrollbar-opacity, 1));
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: hsl(0 0% 0%);
+    }
+}
+
 .mask {
     --scrollbar-width: 4px;
     --mask-image-content: linear-gradient(
@@ -14,21 +35,4 @@
     mask-size: var(--mask-size-content), var(--mask-size-scrollbar);
     mask-position: 0 0, 100% 0;
     mask-repeat: no-repeat, no-repeat;
-
-    &::-webkit-scrollbar {
-        background-color: transparent;
-        width: var(--scrollbar-width, 4px);
-    }
-
-    &::-webkit-scrollbar-track {
-        background-color: transparent;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: rgba(255, 255, 255, 1);
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-        background-color: hsl(0 0% 0%);
-    }
 }
