Fix React example

--- a/views/react/src/components/Messages.scss
+++ b/views/react/src/components/Messages.scss
@@ -15,7 +15,7 @@
     }
 
     &::-webkit-scrollbar-thumb:hover {
-        background-color: hsl(0 0% 0%);
+        background-color: rgb(0, 0, 0);
     }
 }
 
